{
    "name": "TouchControls",
    "maps": [
        {
            "name": "TouchMap",
            "id": "13fd307c-a9f8-494c-93f2-4dd04cac5780",
            "actions": [
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "fcb74a81-83e9-4103-82ea-7bb8c7abc2dd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "0b111185-bb42-4af0-8688-c8c963ca734b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2f3b1e59-715d-4637-af42-89d9015e4e9f",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc7b4940-15a0-45ae-8978-24240e919a01",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}